fix: Fixed Alert overflow and style to be displayed on center. Optimized useNoScroll hook.

--- a/src/components/ui/Alert/Alert.module.scss
+++ b/src/components/ui/Alert/Alert.module.scss
@@ -19,8 +19,8 @@
 
 .container {
   position: relative;
-  padding: 30px 10px 10px;
-  min-width: 50vw;
+  padding: 30px;
+  max-width: 50vw;
   margin: 0 auto;
 
   background-color: var(--clr-primary);
@@ -59,7 +59,7 @@
 
 @include tablet {
   .container {
-    min-width: 90vw;
+    max-width: 90vw;
     width: 90vw;
   }
 }
